# coordination-intelligence

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  company_dna_config.yaml  synthetic_scenarios.py
paper/: coordination-intelligence-techrxiv.docx  main.md
src/coordination_intelligence/: __init__.py  models.py
src/coordination_intelligence/arl/: __init__.py  classifier.py  detector.py  loop.py  resolver.py  router.py
src/coordination_intelligence/cdi/: __init__.py  proxy.py
src/coordination_intelligence/channels/: __init__.py  selector.py
src/coordination_intelligence/channels/adapters/: __init__.py  base.py  email_adapter.py  slack_adapter.py  sms_adapter.py
src/coordination_intelligence/company_dna/: __init__.py  engine.py  schema.py
src/coordination_intelligence/graph/: __init__.py  analysis.py  dependency.py
src/coordination_intelligence/quiet/: __init__.py  resolver.py
tests/: conftest.py  test_arl.py  test_cdi.py  test_channels.py  test_classifier.py  test_company_dna.py  test_detector.py  test_graph.py  test_quiet.py  test_router.py
