[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coordination-intelligence"
version = "0.1.0"
description = "Autonomous Agent Framework for Organizational Blocker Resolution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Pavel Sukhachev", email = "pavel@electromania.llc"}
]
keywords = ["ai", "coordination", "multi-agent", "organizational-management", "blocker-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/pavelsukhachev/coordination-intelligence"
Paper = "https://doi.org/10.36227/techrxiv.PENDING"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
